Bugfix: testing options on alignment for footer forms

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,7 @@ a:hover {
 
 .mail-list-form {
     float: right;
+    text-align: right;
 }
 
 .mail-list-button {
@@ -535,6 +536,10 @@ a:hover {
         font-size: 10px;
         margin: 5px;
         text-align: center;
+    }
+
+    .event-box h2 {
+        font-size: 20px;
     }
 }
 
